[gd_scene load_steps=8 format=2]

[ext_resource path="res://Minijocs/Ocell_Aletejador/Ocell.tscn" type="PackedScene" id=1]
[ext_resource path="res://Minijocs/Ocell_Aletejador/Canyeria.tscn" type="PackedScene" id=2]
[ext_resource path="res://Minijocs/Ocell_Aletejador/Ocell_Aletejador.gd" type="Script" id=3]
[ext_resource path="res://Minijocs/Ocell_Aletejador/Terra.tscn" type="PackedScene" id=4]
[ext_resource path="res://Minijocs/Ocell_Aletejador/Textures_ocell_aletejador/fons_ocell_aletejador.jpg" type="Texture" id=5]
[ext_resource path="res://Minijocs/Ocell_Aletejador/Textures_ocell_aletejador/ADOBEGOTHICSTD-BOLD.OTF" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="Ocell_Aletejador" type="Node2D"]
script = ExtResource( 3 )

[node name="fons1" type="Sprite" parent="."]
position = Vector2( 515, 309.5 )
scale = Vector2( 3.43667, 3.64881 )
texture = ExtResource( 5 )

[node name="Terra" parent="." instance=ExtResource( 4 )]

[node name="Ocell" parent="." instance=ExtResource( 1 )]
position = Vector2( 177, 257 )

[node name="Canyeria1" parent="." instance=ExtResource( 2 )]
position = Vector2( 1073, 218 )

[node name="Canyeria2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1523, 384 )

[node name="Canyeria3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1973, 238 )

[node name="Marcador" type="RichTextLabel" parent="."]
margin_left = 509.0
margin_top = 29.0
margin_right = 549.0
margin_bottom = 69.0
custom_fonts/normal_font = SubResource( 1 )
tab_size = 24

[connection signal="body_shape_entered" from="Terra" to="Ocell" method="_on_Terra_body_shape_entered"]
[connection signal="body_shape_entered" from="Canyeria1" to="Ocell" method="_on_Canyeria_body_shape_entered"]
[connection signal="puntua" from="Canyeria1" to="." method="_on_Canyeria1_puntua"]
[connection signal="body_shape_entered" from="Canyeria2" to="Ocell" method="_on_Canyeria_body_shape_entered"]
[connection signal="puntua" from="Canyeria2" to="." method="_on_Canyeria2_puntua"]
[connection signal="body_shape_entered" from="Canyeria3" to="Ocell" method="_on_Canyeria_body_shape_entered"]
[connection signal="puntua" from="Canyeria3" to="." method="_on_Canyeria3_puntua"]
